# anguis

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
lib/dr_wav/: dr_wav.h
lib/glad/: cmake_install.cmake
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: CMakeLists.txt  cmake_install.cmake
lib/socketio/sioclient/: sioclientTargets.cmake
res/shaders/: bloom.frag  bloom.vert  blur.frag  depth.frag  depth.vert  fade.frag  glowline.frag  main.frag  main.vert  psystem.frag  psystem.vert
res/textures/: logo.hdr  snake.hdr  snake_green.hdr  snake_purple.hdr
server/: server.js
src/anguis/: food.cpp  food.hpp  ground.cpp  ground.hpp  snake.cpp  snake.hpp
src/engine/: audio.cpp  audio.hpp  camera.cpp  camera.hpp  client.cpp  client.hpp  gui.cpp  gui.hpp  lighting.cpp  lighting.hpp  model.cpp  model.hpp  psystem.cpp  psystem.hpp  resources.cpp  resources.hpp  shader.cpp  shader.hpp  state.cpp  state.hpp  texture.cpp  texture.hpp  util.cpp  util.hpp  window.cpp  window.hpp
